<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".UserProfile">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="312dp"
        android:layout_height="468dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/Welcome"
            android:textColor="#DFDADA"
            android:textColorHint="#DFDADA"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/scoreTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/score"
            android:textColor="#DFDADA"
            android:textColorHint="#DFDADA"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:autofillHints=""
            android:hint="@string/new_Password"
            android:inputType="textPassword"
            android:textColor="#DFDADA"
            android:textColorHint="#DFDADA"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnChangepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#03A9F4"
            android:text="@string/btn_ChangePass"
            android:textColor="#DFDADA"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#03A9F4"
            android:text="@string/btn_Cancel"
            android:textColor="#DFDADA"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btnMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#03A9F4"
            android:text="@string/btn_mainMenu"
            android:textColor="#DFDADA"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnUpdatePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#03A9F4"
            android:text="@string/btn_UpdatePass"
            android:textColor="#DFDADA"
            android:textSize="15sp"
            android:visibility="gone" />

        <Button

            android:id="@+id/share_btn"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#3F51B5"
            android:text="@string/share"
            android:textColor="#DFDADA"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#03A9F4"
            android:text="@string/btnSignOut"
            android:textColor="#DFDADA"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="184dp"
        android:text="@string/txtView"
        android:textColor="#DFDADA"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/userImg"
        android:layout_width="211dp"
        android:layout_height="122dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/addimg" />


</androidx.constraintlayout.widget.ConstraintLayout>