<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="55dp"
        android:text="@string/Register_txtView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#DFDADA"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="95dp" />

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:hint="@string/Register_Username"
        android:inputType="textPersonName"
        android:textColor="#DFDADA"
        android:textColorHint="#DFDADA" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:hint="@string/Register_Email"
        android:inputType="textEmailAddress"
        android:textColor="#DFDADA"
        android:textColorHint="#DFDADA" />


    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/Register_Password"
        android:inputType="textPassword"
        android:textColor="#DFDADA"
        android:textColorHint="#DFDADA"
        android:autofillHints="" />



    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#03A9F4"
        android:text="@string/btn_register"
        android:textColor="#DFDADA"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>