<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".ForgotPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="55dp"
        android:padding="10dp"
        android:text="@string/ForgetPass_Email"
        android:textColor="#DFDADA"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/resetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#DFDADA"
        android:textColorHint="#DFDADA"
        android:autofillHints=""  />



        <Button
            android:id="@+id/backToLoginBtn"
            android:text="@string/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#03A9F4"
            android:textColor="#DFDADA"
            android:textSize="15sp"
             />


    <Button
        android:id="@+id/sendPassBtn"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#03A9F4"
        android:textColor="#DFDADA"
        android:textSize="15sp"
         />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>