<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="314dp"
        android:layout_height="630dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="55dp"
            android:text="@string/space_defender"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#DFDADA"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="95dp" />

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:autofillHints=""
            android:hint="@string/Login_Email"
            android:inputType="textPersonName"
            android:textColor="#DFDADA"
            android:textColorHint="#DFDADA" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/Login_Password"
            android:inputType="textPassword"
            android:textColor="#DFDADA"
            android:textColorHint="#DFDADA" />


        <CheckBox
            android:id="@+id/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/Remember_me"
            android:textColor="#DFDADA"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_margin="15dp"
            android:background="#FF5722"
            android:text="@string/Sign_in"
            android:textColor="#DFDADA"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="or"
            android:textAlignment="center"
            android:textColor="#DFDADA"
            android:textSize="24sp" />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnFb"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_margin="15dp"
            android:textSize="15sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:clickable="true"
        android:padding="5dp"
        android:text="@string/forgot"
        android:textColor="#DFDADA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:clickable="true"
        android:padding="5dp"
        android:text="@string/newUser"
        android:textColor="#DFDADA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.12" />

</androidx.constraintlayout.widget.ConstraintLayout>