<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/scoreTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="76dp"
        android:hint="@string/score"
        android:textColor="#DFDADA"
        android:textColorHint="#DFDADA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt" />

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="140dp"
        android:hint="@string/Welcome"
        android:textColor="#DFDADA"
        android:textColorHint="#DFDADA"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="291dp"
        android:layout_height="310dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707">


        <Button
            android:id="@+id/btnPlayGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#03A9F4"
            android:text="@string/btn_Play"
            android:textColor="#DFDADA"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnLeaderBord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#03A9F4"
            android:text="@string/btn_LeaderBoard"
            android:textColor="#DFDADA"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#03A9F4"
            android:text="@string/btn_Chat"
            android:textColor="#DFDADA"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#03A9F4"
            android:text="@string/btnSignOut"
            android:textColor="#DFDADA"
            android:textSize="15sp" />
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <ImageView
        android:id="@+id/userImg"
        android:layout_width="93dp"
        android:layout_height="67dp"
        android:layout_marginBottom="212dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/user" />

</androidx.constraintlayout.widget.ConstraintLayout>